[package]
name = "scalable_mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
serial_test = "1.0.0"

[dependencies]
rand = "0.8.5"
