[package]
name = "scalable_mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
serial_test = "1.0.0"

[dependencies]
argh = "0.1.10"
json = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
seahash = "4.1.0"
sha2 = "0.10.6"
smol = "1.3.0"
smolscale = {version = "0.3.52", features=["preempt"] }
vint64 = "1.0.1"
