[package]
name = "scalable_mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
serial_test = "1.0.0"

[dependencies]
argh = "0.1.10"
async-channel = "1.8.0"
futures-lite = "1.13.0"
json = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
seahash = "4.1.0"
sha2 = "0.10.6"
tokio = { version = "1.28.0", features = ["full"] }
vint64 = "1.0.1"
